# OCCTraining

./: README.md
classCode/: class1.ipynb  class1.py  class1_analysis_brep.ipynb  class1_different_topo.ipynb
classCode/.ipynb_checkpoints/: class1-checkpoint.ipynb  class1_analysis_brep-checkpoint.ipynb
classCode/class1/: class1.ipynb  class1.py  class1_brep.py
classCode/class1/.ipynb_checkpoints/: class1-checkpoint.ipynb
classCode/class2/: class2_boolean.ipynb  class2_extrusion.ipynb  class2_hole.ipynb  class2_revolution.ipynb  class_cup.ipynb
classCode/class2/.ipynb_checkpoints/: class2_revolution-checkpoint.ipynb
classCode/class3/: commandP.ipynb  commandP2.ipynb  commandPattern.ipynb  snapshot.ipynb  snapshot2.ipynb
classCode/class3/.ipynb_checkpoints/: commandP-checkpoint.ipynb  ocafTest-checkpoint.ipynb  snapshot2-checkpoint.ipynb
classCode/class4/TestCAD/ALCAD/: CMakeLists.txt  CMakeUserPresets.json
classCode/class4/TestCAD/ALCAD/src/: main.cpp
classCode/class6/occqt_view_select/: CMakeLists.txt  CMakeUserPresets.json  MainWindow.cpp  MainWindow.h  OccWidget.cpp  OccWidget.h
classPlan/: OCC第0课.md  OCC第1课 Brep.md  Plan.md  class5_occtoverview.md
classPlan/class0/: 什么是OCC.md
classPlan/class1/: OCC第1课 Brep.md
classPlan/class2/: class2.md
classPlan/class3/: class3_undo_redo.md
classPlan/class4/: OpenCascadeLearning.docx  class4.md
classPlan/class6/: class6_independent_project.md  class6_基础独立项目.md
classPlan/class7/: class7qt信号槽、qss、andercad简单入门.md
pythonocc-demos-master/jupyter_notebooks/: boolean_ops.ipynb  boolean_shape_upgrade.ipynb  helloworld.ipynb  load_step_ap203_multiple_shapes.ipynb  make_prism.ipynb
